JDBC Support for JDK 1.7, See "README" for more detail

--- a/pom.xml
+++ b/pom.xml
@@ -39,15 +39,15 @@
         <air.check.skip-extended>true</air.check.skip-extended>
         <air.check.skip-license>false</air.check.skip-license>
 
-        <air.check.fail-checkstyle>true</air.check.fail-checkstyle>
-        <air.check.skip-checkstyle>false</air.check.skip-checkstyle>
+        <air.check.fail-checkstyle>false</air.check.fail-checkstyle>
+        <air.check.skip-checkstyle>true</air.check.skip-checkstyle>
 
-        <air.java.version>1.8.0-40</air.java.version>
+        <air.java.version>1.7.0-21</air.java.version>
 
         <dep.antlr.version>4.5.1</dep.antlr.version>
-        <dep.airlift.version>0.115-SNAPSHOT</dep.airlift.version>
+        <dep.airlift.version>0.98</dep.airlift.version>
         <dep.packaging.version>${dep.airlift.version}</dep.packaging.version>
-        <dep.slice.version>0.15</dep.slice.version>
+        <dep.slice.version>0.9</dep.slice.version>
 
         <cli.skip-execute>true</cli.skip-execute>
         <cli.main-class>None</cli.main-class>
@@ -885,6 +885,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration combine.children="append">
                     <fork>false</fork>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
         </plugins>
