--- a/presto-jdbc/pom.xml
+++ b/presto-jdbc/pom.xml
@@ -17,19 +17,22 @@
     </properties>
 
     <dependencies>
+
+
         <dependency>
-            <groupId>com.facebook.presto</groupId>
-            <artifactId>presto-client</artifactId>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.facebook.presto</groupId>
-            <artifactId>presto-spi</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
 
         <dependency>
             <groupId>io.airlift</groupId>
             <artifactId>http-client</artifactId>
+            <version>${dep.airlift.version}</version>
             <exclusions>
                 <!-- configuration is not used -->
                 <exclusion>
@@ -66,11 +69,13 @@
         <dependency>
             <groupId>io.airlift</groupId>
             <artifactId>units</artifactId>
+            <version>${dep.airlift.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.airlift</groupId>
             <artifactId>json</artifactId>
+            <version>${dep.airlift.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>javax.inject</groupId>
@@ -109,12 +114,13 @@
         </dependency>
 
         <!-- for testing -->
+<!--
         <dependency>
             <groupId>com.facebook.presto</groupId>
             <artifactId>presto-main</artifactId>
             <scope>test</scope>
         </dependency>
-
+-->
         <dependency>
             <groupId>com.facebook.presto</groupId>
             <artifactId>presto-tpch</artifactId>
@@ -131,12 +137,14 @@
             <groupId>io.airlift</groupId>
             <artifactId>testing</artifactId>
             <scope>test</scope>
+            <version>${dep.airlift.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.airlift</groupId>
             <artifactId>log-manager</artifactId>
             <scope>test</scope>
+            <version>${dep.airlift.version}</version>
         </dependency>
     </dependencies>
 
